[fix]Elimination of side scrolling in the agenda view on small screens. // Eliminacion de scroll lateral en la vista agenda en pantallas pequeñas.

--- a/src/Pages/CitasDentista/CitasDentista.css
+++ b/src/Pages/CitasDentista/CitasDentista.css
@@ -1,3 +1,7 @@
+* {
+    overflow-x: hidden;
+}
+
 .citasDoctor {
     height: auto;
     min-height: 90vh;
