--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -7,7 +7,7 @@
   background-image: url(../../../img/muelaTatoo.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 50%;
+  background-size: 40%;
 
   display: flex;
   align-items: center;
